# pj01-data-analysis

./: .env  00_prj_공공데이터_메타데이터_분석.ipynb  00_prj_유투브영상_두산베어스_댓글.ipynb  00_prj_유투브영상_한화_댓글.ipynb  00_데이터_분석_잡코리아_크롤링.ipynb  01_파이썬_기초_문법(변수,자료형)_blank.ipynb  01_파이썬_기초_문법.ipynb  02_파이썬_기초_문법(과제_0115).ipynb  02_파이썬_기초_문법(제어문)_blank.ipynb  03_파이썬_기초_문법(함수)_blank.ipynb  04_데이터_분석_기초_넘파이_blank.ipynb  05_데이터_분석_기초_판다스_blank.ipynb  05_데이터분석_기초_판다스(과제_0119).ipynb  05_판다스_과제_답안.ipynb  06_데이터_분석_기초_실습.ipynb  07_탐색적_데이터_분석_가이드.ipynb  08_탐색적_데이터_분석_실습_따릉이.ipynb  08_탐색적_데이터_분석_실습_따릉이_map.ipynb  08_탐색적_데이터_분석_실습_따릉이_원본.ipynb  09.텍스트_데이터분석_토크나이징_KoNLPy_2.ipynb  09.텍스트_데이터분석_토크나이징_KoNLPy_test.ipynb  10.텍스트_데이터분석_장바구니분석.ipynb  10_과제_데이터_분석_20260123.ipynb  11.텍스트_데이터_분석_장바구니분석_LDA.ipynb  11_텍스트_데이터_분석_LDA_ORIGIN.ipynb  11_텍스트_데이터_분석_LDA_원본.ipynb  12_텍스트_데이터_분석_수치화.ipynb  13_데이터_수집_OPEN_API.ipynb  13_데이터_수집_OPEN_API_2.ipynb  13_데이터_수집_OPEN_API_20260127.ipynb  13_데이터_수집_OPEN_API_3.ipynb  13_데이터_수집_OPEN_API_과제_20160126.ipynb  14_데이터_수집_BeautifulSoup.ipynb  14_데이터_수집_BeautifulSoup_최종원본.ipynb  15_데이터_수집_Selenium.ipynb  15_데이터_수집_Selenium_원본.ipynb  15_데이터_수집_Selenium_최종원본.ipynb  20260116_파이썬_반복문_실전_연습_문제_20선.ipynb  20260121_데이터분석_과제.ipynb  20260121_데이터분석_과제_토크나이징_설치이슈포함.ipynb  (+3 more)
data/: 08_탐색적_데이터_분석_실습_따릉이.ipynb  appreply2_보충.csv  appreply_결측치삭제2.csv  eda_example_ecommerce_orders.csv  eda_example_ecommerce_orders_분석.csv  test.txt  기술문서_한국도로교통공단_법규위반별 사고다발지역 정보_11680.hwp  네이버검색_인공지능_csv  배달의민족_구글플레이스토어_댓글수집(20260128).csv  서울시 나눔카 연령대별 이용현황.csv  서울시 도심권 공공도서관 KDC 분류별 연간 대출 현황.xlsx  (+3 more)
