[project]
name = "pj01-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "emoji>=2.15.0",
    "folium>=0.20.0",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "instaloader>=4.15",
    "jpype1==1.5.2",
    "jupyter>=1.1.1",
    "kiwipiepy>=0.22.2",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "network>=0.1",
    "networkx>=3.6.1",
    "nodeenv>=1.10.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyldavis>=3.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "selenium-stealth>=1.0.6",
    "stealth>=0.0.1",
    "wordcloud>=1.9.6",
]
